--- a/pages/albertson.html
+++ b/pages/albertson.html
@@ -80,7 +80,7 @@ permalink: /albertson.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="float:left;max-width:75%;"></a>
     <br>
-    <sub>TPL Historic Building Files (BU-10009), 
+    <sub>Crystal Palace Public Market, TPL Historic Building Files (BU-10009), 
     <br> 
     Courtesy Northwest Room</sub>
     <br>
@@ -88,7 +88,7 @@ permalink: /albertson.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="float:right;max-width:115%;"></a>
     <br>
-    <sub>TPL Historic Building Files (BU-12230), 
+    <sub>Crystal Palace Public Market, TPL Historic Building Files (BU-12230), 
     <br>  
     Courtesy Northwest Room</sub>
   </div>
