--- a/pages/babcock.html
+++ b/pages/babcock.html
@@ -71,11 +71,13 @@ permalink: /babcock.html
     <br>
     <sub>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</sub>
     <br>
-    <br>
-    <sub>TPL Historic Building Files (BU-11000), 11-04-1928, Courtesy Northwest Room</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="float:right;max-width:100%;"></a>
+    <br>
+    <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
+    <br>
+    Courtesy Northwest Room</sub>
   </div>
 </div>
   
