--- a/pages/bassindale.html
+++ b/pages/bassindale.html
@@ -70,8 +70,6 @@ permalink: /bassindale.html
     <br>
     <sub>Sources: Bassindale, Lambert. “Lambert Bassindale Papers, 1925.", "1925., Northern Pacific Beneficial Association Hospital Records. , 1905. Print.”</sub>
     <br>
-    <br>
-    <sub>TPL Historic Building Files (BU-10396), Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_bassindale.jpeg" alt="Lambert Bassindale" style="float:right;max-width:75%;"></a>
@@ -83,6 +81,10 @@ permalink: /bassindale.html
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_npba" alt="N.P.B.A. Hospital" style="float:right;max-width:150%;"></a>
+    <br>
+    <sub>TPL Historic Building Files (BU-10396), 
+    <br>  
+    Courtesy Northwest Room</sub>
   </div>
 </div>
   
