--- a/pages/couchot.html
+++ b/pages/couchot.html
@@ -73,15 +73,15 @@ permalink: /couchot.html
     <br>
     <sub>Sources: “Letters - Times-Herald (Vallejo, CA) - May 25, 2017 - Page 9,”, “Maurice Couchot | Hensolt SEAONC Legacy Project.”, “PCAD - Maurice C. Couchot.”</sub>
     <br>
-    <br>
-    <sub>TPL Historic Building Files (BU-13919), Circa 1920, Courtesy Northwest Room</sub>
-    <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <br>
     <br>
     <a href="https://aweymo.github.io/losttacoma/browse.html#3 SCHUSTER PARKWAY, TACOMA""><img src="https://aweymo.github.io/losttacoma/objects/ ext_sperry" alt="Sperry Flour Company Elevator" style="float:right;max-width:100%;"></a>
     <br>
+    <sub>TPL Historic Building Files (BU-13919), Circa 1920, 
+    <br>
+    Courtesy Northwest Room</sub>
     <br>
   </div>
 </div>
