--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -83,14 +83,6 @@ permalink: /dugan.html
     <br>
     <sub>Sources: “PCAD - Earl Nathaniel Dugan.”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - March 30, 1912 - Page 5,”, The Modern Cemetery, 1920., “Tribune (Published as THE NEWS TRIBUNE) - February 12, 1921 - Page 8,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 19, 1922 - Page 24,”. “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 28, 1932 - Page 9,”</sub>
     <br>
-    <br>
-    <sub>Donnelly Site Hotel, TPL Historic Building Files (BU-11892), Courtesy Northwest Room</sub>
-    <br>
-    <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), ca. 1934, Courtesy Northwest Room</sub>
-    <br>
-    <sub>Point Defiance Pavilion, Richards Studio D7207-6, 1938-04-24, Courtesy Northwest Room</sub>
-    <br>
-    <sub>Washington Hardware Company Remodel, TPL Historic Building Files (BU-10989), Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="float:right;max-width:100%;"></a>
@@ -100,18 +92,34 @@ permalink: /dugan.html
   <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_02" alt="Point Defiance Pavilion" style="float:left;max-width:100%;"></a>
+    <br>
+    <sub>Donnelly Site Hotel, TPL Historic Building Files (BU-11892), 
+    <br>
+    Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_01" alt="Point Defiance Pavilion" style="float:left;max-width:100%;"></a>
+    <br>
+    <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), ca. 1934, 
+    <br>
+    Courtesy Northwest Room</sub>
   </div>
 </div>
 
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="float:left;max-width:100%;"></a>
+    <br>
+    <sub>Point Defiance Pavilion, Richards Studio D7207-6, 1938-04-24, 
+    <br>
+    Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118"><img src="https://aweymo.github.io/losttacoma/objects/ ext_washington" alt="Washington Hardware Company Remodel" style="float:right;max-width:100%;"></a>
+    <br>
+    <sub>Washington Hardware Company Remodel, TPL Historic Building Files (BU-10989), 
+    <br>
+      Courtesy Northwest Room</sub>
   </div>
 </div>
   
