--- a/pages/gove.html
+++ b/pages/gove.html
@@ -72,8 +72,6 @@ permalink: /gove.html
     <br>
     <sub>Sources: “PCAD - George Gove.”, “Tribune (Published as THE NEWS TRIBUNE) - August 31, 1956 - Page 13,”, “The Tacoma Daily News - July 23, 1910 - Page 4,”, “The Tacoma Daily Ledger - January 1, 1913”, “The Tacoma Times - February 12, 1913”</sub>
     <br>
-    <sub>Hawthorne School, TPL General Collection (TPL-2868), c.a. 1913, Courtesy Northwest Room</sub>
-    <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_gove.jpeg" alt="George Gove" style="min-width:100%;"></a>
@@ -85,6 +83,11 @@ permalink: /gove.html
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne" alt="Hawthorne School" style="max-width:100%;"></a>
+    <br>
+    <sub>Hawthorne School, TPL General Collection (TPL-2868), c.a. 1913, 
+    <br> 
+    Courtesy Northwest Room</sub>
+    <br>
   </div>
 </div>
   
