--- a/pages/heath.html
+++ b/pages/heath.html
@@ -72,9 +72,6 @@ permalink: /heath.html
     <br>
     <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Frederick H. Heath.”, “PCAD - Frederick Henry Heath.”, “Peering at the Past: County High Schools Were Private, Parochial before Public.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - April 15, 1931 - Page 6,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - March 4, 1953 - Page 1,”</sub>
     <br>
-    <sub>TPL Historic Building Files (BU-10009), Courtesy Northwest Room</sub>
-    <br>
-    <sub>TPL Historic Building Files (BU-12230), Courtesy Northwest Room</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#Frederick%20Henry%20Heath"><img src="https://aweymo.github.io/losttacoma/objects/p_heath.jpeg" alt="Frederick Henry Heath" style="max-width:100%;"></a>
@@ -84,9 +81,18 @@ permalink: /heath.html
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne School" alt="Hawthorne School" style="max-width:100%;"></a>
+    <br>
+    <sub>Hawthorne School, TPL Historic Building Files (BU-10009), 
+    <br>  
+    Courtesy Northwest Room</sub>
+    <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050"><img src="https://aweymo.github.io/losttacoma/objects/ ext_edison" alt="Edison School Annex" style="max-width:100%;"></a>
+    <br>
+    <sub>Edison School, TPL Historic Building Files (BU-12230), 
+    <br>  
+    Courtesy Northwest Room</sub>
   </div>
 </div>
   
