--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -86,6 +86,10 @@ permalink: /dugan.html
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="float:right;max-width:100%;"></a>
+    <br>
+    <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), c.a. 1934
+    <br>
+    Courtesy Northwest Room</sub>
   </div>
 </div>
   
