--- a/pages/gove.html
+++ b/pages/gove.html
@@ -12,7 +12,7 @@ permalink: /gove.html
     img {
   width: 800px;
   height: 800px;
-  object-fit: contain;
+  object-fit: cover;
 }
 * {
   box-sizing: border-box;
