--- a/pages/lance.html
+++ b/pages/lance.html
@@ -3,3 +3,91 @@ title: Gaston C. Lance
 layout: about
 permalink: /lance.html
 ---
+{%- assign items = site.data[site.metadata] -%}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    img {
+  width: 80000px;
+  height: 80000px;
+  object-fit: cover;
+}
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 800px; 
+}
+
+.left {
+  width: 50%;
+}
+  
+.column {
+  float: right;
+  padding: 10px;
+  height: 800px; 
+  }
+  
+.right {
+  width: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+ @media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <h4><p><b>Gaston C. Lance</b></p></h4>
+    <br>
+    <em>1877-1964</em>
+    <br>
+    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA">Mottau Building</a></p>
+    <br>
+    <p>Gaston C. Lance was born in Bucharest, Romania to French parents in 1877 before being orphaned at the age of twelve. After traveling and working a number of vocational jobs, Lance settled in Seattle in 1906, where worked for the Morrell Artistic Foundry and opened up his own ship design and carpentry shop. This work led to Lance being hired as the art director for Weaver Productions, who were attempting to challenge Hollywood cinematic strongholds. After the company folded, Lance would become partners with Ambrose J. Russell in 1930 and then Irwin E Muri and John E. McGuire in 1936. This was all achieved without Lance ever attaining a formal architectural degree.</p>
+    <br>
+    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/13548/rec/103">Empress Theater</a>, 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/9785/rec/127">Sundgren House</a>, 
+    <br>
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/11408/rec/154">Kress Drive In</a> </p>
+    <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#Gaston%20C.%20Lance"><img src="https://aweymo.github.io/losttacoma/objects/p_lance.jpg" alt="Gaston C. Lance" style="max-width:100%;"></a>
+  </div>
+</div>
+      
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <br>
+    <sub>Sources: College Park Historic District National Register of Historic Places Nomination - Page 13, Washington State Department of Archaeology & Historic Preservation (DAHP).“, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - June 7, 1944 - Page 12,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - November 11, 1936 - Page 2,”, “Tribune (Published as The Tacoma Sunday Ledger SUNDAY NEWS TRIBUNE) - March 27, 1949 - Page 9,”</sub>
+    <br>
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_mottau" alt="Mottau Building" style="max-width:100%;"></a>
+    <br>
+    <sub>Mottau Building, Historic Property Inventory Forms (BU-3659), 06-30-1993
+    <br>  
+    Courtesy Northwest Room</sub>
+  </div>
+</div>
+  
+</body>
+</html>
