--- a/pages/cornils.html
+++ b/pages/cornils.html
@@ -70,11 +70,11 @@ permalink: /cornils.html
     <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=cornils"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="float:right;max-width:100%"></a>
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=cornils"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="max-width:100%"></a>
     <br>
     <sub>TPL Cultural Resource Survey (BU-10009), 1977, 
-      <br>
-      Courtesy Northwest Room</sub>
+    <br>
+    Courtesy Northwest Room</sub>
   </div>
 </div>
   
