--- a/pages/couchot.html
+++ b/pages/couchot.html
@@ -77,9 +77,9 @@ permalink: /couchot.html
   <div class="column right" style="background-color:#FFFFFF;">
     <br>
     <br>
-    <a href="https://aweymo.github.io/losttacoma/browse.html#3 SCHUSTER PARKWAY, TACOMA""><img src="https://aweymo.github.io/losttacoma/objects/ ext_sperry" alt="Sperry Flour Company Elevator" style="float:right;max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#3 SCHUSTER PARKWAY, TACOMA""><img src="https://aweymo.github.io/losttacoma/objects/ ext_sperry" alt="Sperry Flour Company Elevator" style="max-width:100%;"></a>
     <br>
-    <sub>TPL Historic Building Files (BU-13919), Circa 1920, 
+    <sub>TPL Historic Building Files (BU-13919), c.a 1920, 
     <br>
     Courtesy Northwest Room</sub>
     <br>
