dugan no floats

--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -74,7 +74,7 @@ permalink: /dugan.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=dugan"><img src="https://aweymo.github.io/losttacoma/objects/p_dugan.jpeg" alt="Earl N. Dugan" style="float:right;max-width:60%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=dugan"><img src="https://aweymo.github.io/losttacoma/objects/p_dugan.jpeg" alt="Earl N. Dugan" style="max-width:60%;"></a>
   </div>
 </div>
       
@@ -85,7 +85,7 @@ permalink: /dugan.html
     <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="float:right;max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="max-width:100%;"></a>
     <br>
     <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), c.a. 1934
     <br>
@@ -95,14 +95,14 @@ permalink: /dugan.html
   
   <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_02" alt="Point Defiance Pavilion" style="float:left;max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_02" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
     <br>
     <sub>Donnelly Site Hotel, TPL Historic Building Files (BU-11892), 
     <br>
     Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_01" alt="Point Defiance Pavilion" style="float:left;max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_01" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
     <br>
     <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), ca. 1934, 
     <br>
@@ -112,14 +112,14 @@ permalink: /dugan.html
 
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="float:left;max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
     <br>
     <sub>Point Defiance Pavilion, Richards Studio D7207-6, 1938-04-24, 
     <br>
     Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118"><img src="https://aweymo.github.io/losttacoma/objects/ ext_washington" alt="Washington Hardware Company Remodel" style="float:right;max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118"><img src="https://aweymo.github.io/losttacoma/objects/ ext_washington" alt="Washington Hardware Company Remodel" style="max-width:100%;"></a>
     <br>
     <sub>Washington Hardware Company Remodel, TPL Historic Building Files (BU-10989), 
     <br>
