--- a/pages/ekvall.html
+++ b/pages/ekvall.html
@@ -80,6 +80,7 @@ permalink: /ekvall.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/objects/p_ekvall.jpeg" alt="George L. Ekvall" style="max-width:100%;"></a>
     <br>
+    <sub>Courtesy Washington State Department of Architectural Licensing</sub>
     <br>
   </div>
 </div>
