--- a/pages/heath.html
+++ b/pages/heath.html
@@ -10,9 +10,9 @@ permalink: /heath.html
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
     img {
-  width: 800px;
-  height: 800px;
-  object-fit: cover;
+  width: 600px;
+  height: 600px;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
