--- a/pages/hill.html
+++ b/pages/hill.html
@@ -68,15 +68,6 @@ permalink: /hill.html
     <br>
     <p>Irwin (sometimes Irwyn) Horatio Hill was born in Illinois and graduated from the University of Illinois and Chicago Art Institute. After moving to Tacoma in 1903, Hill partnered with George Bullard, then Woodroofe and Griffin, then Hill, Mock & Griffin and finally Mock & Morrison. Hill was a member of the Tacoma Park Board and the Tacoma Rotary Club.</p>
     <br>
-    </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#Irwin%20H.%20Hill"><img src="https://aweymo.github.io/losttacoma/objects/p_hill.jpeg" alt="Irwin H. Hill" style="max-width:100%;"></a>
-  </div>
-</div>
-      
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <br>
     <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/33568/rec/1">Ernest C. and Hattie M. Richards house</a>, 
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/23337/rec/13">Pierce County Hospital</a>, 
@@ -85,6 +76,19 @@ permalink: /hill.html
     <br>
     <sub>Sources: College Park Historic District National Register of Historic Places Nomination - Page 12, “Hill, Irwyn H. - Local History & Biography Index - Northwest Room Collections.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - February 16, 1925 - Page 10,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - April 25, 1927 - Page 28,”, Historic Preservation Resource Guide - July 2021 - Page 23</sub>
     <br>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#Irwin%20H.%20Hill"><img src="https://aweymo.github.io/losttacoma/objects/p_hill.jpeg" alt="Irwin H. Hill" style="max-width:100%;"></a>
+  </div>
+</div>
+      
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099"><img src="https://aweymo.github.io/losttacoma/objects/ ext_roosevelt" alt="Roosevelt School" style="max-width:100%;"></a>
+    <br>
+    <sub>Roosevelt School, Marvin D. Boland Collection (BOLAND-B17893), 12-01-1928
+    <br>  
+    Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005"><img src="https://aweymo.github.io/losttacoma/objects/ ext_arlington" alt="Arlington Elementary School Addition" style="max-width:100%;"></a>
@@ -97,15 +101,14 @@ permalink: /hill.html
 
 <div class="row">
     <div class="column left" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud_01" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
       <br>
-      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099"><img src="https://aweymo.github.io/losttacoma/objects/ ext_roosevelt" alt="Roosevelt School" style="max-width:100%;"></a>
-      <br>
-      <sub>Roosevelt School, Marvin D. Boland Collection (BOLAND-B17893), 12-01-1928
+      <sub>Talmud Torah Synagogue, Richards Studio (D141770-15), 05-28-1964
       <br>  
       Courtesy Northwest Room</sub>
     </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
+      <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="losttacoma/objects/ ext_talmud_02" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
       <br>
       <sub>Talmud Torah Synagogue, Marvin D. Boland Collection (BOLAND-B18322), 04-08-1928
       <br>  
