--- a/pages/bassindale.html
+++ b/pages/bassindale.html
@@ -80,7 +80,7 @@ permalink: /bassindale.html
   <div class="column left" style="background-color:#FFFFFF;">
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_npba" alt="N.P.B.A. Hospital" style="float:right;max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_npba" alt="N.P.B.A. Hospital" style="max-width:100%;"></a>
     <br>
     <sub>N.P.B.A. Hospital, TPL Historic Building Files (BU-10396), 
     <br>  
