--- a/pages/bassindale.html
+++ b/pages/bassindale.html
@@ -72,7 +72,7 @@ permalink: /bassindale.html
     <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_bassindale.jpeg" alt="Lambert Bassindale" style="float:right;max-width:75%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_bassindale.jpeg" alt="Lambert Bassindale" style="max-width:75%;"></a>
   </div>
 </div>
       
