--- a/pages/gove.html
+++ b/pages/gove.html
@@ -10,9 +10,9 @@ permalink: /gove.html
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
     img {
-  width: 800px;
-  height: 800px;
-  object-fit: contain;
+  width: 600px;
+  height: 600px;
+  object-fit: cover;
 }
 * {
   box-sizing: border-box;
@@ -82,7 +82,7 @@ permalink: /gove.html
   <div class="column left" style="background-color:#FFFFFF;">
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne" alt="Hawthorne School" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne" alt="Hawthorne School" style="max-width:50%;"></a>
     <br>
     <sub>Hawthorne School, TPL General Collection (TPL-2868), c.a. 1913, 
     <br> 
