--- a/pages/heath.html
+++ b/pages/heath.html
@@ -12,7 +12,7 @@ permalink: /heath.html
     img {
   width: 600px;
   height: 600px;
-  object-fit: contain;
+  object-fit: cover;
 }
 * {
   box-sizing: border-box;
