--- a/pages/hill.html
+++ b/pages/hill.html
@@ -108,7 +108,7 @@ permalink: /hill.html
       Courtesy Northwest Room</sub>
     </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="losttacoma/objects/ ext_talmud_02" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
+      <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud_02" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
       <br>
       <sub>Talmud Torah Synagogue, Marvin D. Boland Collection (BOLAND-B18322), 04-08-1928
       <br>  
