--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -60,7 +60,17 @@ permalink: /dugan.html
     <em>1877-1956</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA">Donnelly Site Hotel</a> <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA">Lawrence Block Remodel</a> <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA">Point Defiance Pavilion</a> <a href="https://aweymo.github.io/losttacoma/item.html?id=lt117">Visitation Academy</a> <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118">Washington Hardware Company Remodel</a> </p>
+    <p>Lost Tacoma Locations: 
+    <br>  
+    <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA">Donnelly Site Hotel</a>, 
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA">Lawrence Block Remodel</a>, 
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA">Point Defiance Pavilion</a>,
+    <br> 
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt117">Visitation Academy</a>, 
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118">Washington Hardware Company Remodel</a> </p>
     <br>
     <p>Earl N. Dugan was born in Perry, Iowa and graduated from the University of Illinois in 1906. After working for a short while in Chicago and San Francisco, he arrived in Tacoma working independently as a draftsman. This led to partnerships with Sutton, Whitney and Dugan as well as Mock, Morrison and Dugan. Dugan was the founding member of the Tacoma Society of Architects and would sometimes use this platform to secure contracts through free consultation, as was the case for the Point Defiance Pavilion.</p>
     <br>
