--- a/pages/heath.html
+++ b/pages/heath.html
@@ -80,7 +80,7 @@ permalink: /heath.html
       
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne" alt="Hawthorne School" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne" alt="Hawthorne School" style="max-width:100%;object-fit: contain;"></a>
     <br>
     <sub>Hawthorne School, TPL Historic Building Files (BU-10009), 
     <br>  
