hill portrait contain

--- a/pages/hill.html
+++ b/pages/hill.html
@@ -78,7 +78,7 @@ permalink: /hill.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#Irwin%20H.%20Hill"><img src="https://aweymo.github.io/losttacoma/objects/p_hill.jpeg" alt="Irwin H. Hill" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#Irwin%20H.%20Hill"><img src="https://aweymo.github.io/losttacoma/objects/p_hill.jpeg" alt="Irwin H. Hill" style="max-width:100%;object-fit: contain;"></a>
   </div>
 </div>
       
