--- a/pages/bachelor.html
+++ b/pages/bachelor.html
@@ -10,9 +10,9 @@ permalink: /bachelor.html
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
      img {
-  width: 600px;
-  height: 600px;
-  object-fit: contain;
+  width: 800px;
+  height: 800px;
+  object-fit: cover;
 }
 * {
   box-sizing: border-box;
@@ -21,7 +21,7 @@ permalink: /bachelor.html
 .column {
   float: left;
   padding: 10px;
-  height: 800px; 
+  height: 1000px; 
 }
 
 .left {
@@ -31,7 +31,7 @@ permalink: /bachelor.html
 .column {
   float: right;
   padding: 10px;
-  height: 800px; 
+  height: 1000px; 
   }
   
 .right {
