lance other work

--- a/pages/lance.html
+++ b/pages/lance.html
@@ -62,7 +62,9 @@ permalink: /lance.html
     <br>
     <p>Gaston C. Lance was born in Bucharest, Romania to French parents in 1877 before being orphaned at the age of twelve. After traveling and working a number of vocational jobs, Lance settled in Seattle in 1906, where worked for the Morrell Artistic Foundry and opened up his own ship design and carpentry shop. This work led to Lance being hired as the art director for Weaver Productions, who were attempting to challenge Hollywood cinematic strongholds. After the company folded, Lance would become partners with Ambrose J. Russell in 1930 and then Irwin E Muri and John E. McGuire in 1936. This was all achieved without Lance ever attaining a formal architectural degree.</p>
     <br>
-    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/13548/rec/103">Empress Theater</a>, 
+    <p>Other Work: 
+    <br>  
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/13548/rec/103">Empress Theater</a>, 
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/9785/rec/127">Sundgren House</a>, 
     <br>
