--- a/pages/heath.html
+++ b/pages/heath.html
@@ -74,13 +74,13 @@ permalink: /heath.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#Frederick%20Henry%20Heath"><img src="https://aweymo.github.io/losttacoma/objects/p_heath.png" alt="Frederick Henry Heath" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#Frederick%20Henry%20Heath"><img src="https://aweymo.github.io/losttacoma/objects/p_heath.png" alt="Frederick Henry Heath" style="max-width:100%;object-fit: contain;"></a>
   </div>
 </div>
       
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne" alt="Hawthorne School" style="max-width:100%;object-fit: contain;"></a>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne" alt="Hawthorne School" style="max-width:100%;"></a>
     <br>
     <sub>Hawthorne School, TPL Historic Building Files (BU-10009), 
     <br>  
