lance contain portrait

--- a/pages/lance.html
+++ b/pages/lance.html
@@ -12,7 +12,7 @@ permalink: /lance.html
     img {
   width: 600px;
   height: 600px;
-  object-fit: contain;
+  object-fit: cover;
 }
 * {
   box-sizing: border-box;
@@ -73,7 +73,7 @@ permalink: /lance.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#Gaston%20C.%20Lance"><img src="https://aweymo.github.io/losttacoma/objects/p_lance.jpg" alt="Gaston C. Lance" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#Gaston%20C.%20Lance"><img src="https://aweymo.github.io/losttacoma/objects/p_lance.jpg" alt="Gaston C. Lance" style="max-width:100%;object-fit: contain;"></a>
   </div>
 </div>
       
